# soldat_cpp

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/: copilot-instructions.md
assets/: CMakeLists.txt
cmake/: embed_binary.cmake
doc/: tasks.md
src/client/: BinPack.cpp  BinPack.hpp  CMakeLists.txt  Client.cpp  Client.hpp  ClientCommands.cpp  ClientCommands.hpp  ClientGame.cpp  ClientGame.hpp  ControlGame.cpp  ControlGame.hpp  FileClient.cpp  FileClient.cpp.h  GameMenus.cpp  GameMenus.hpp  GameRendering.cpp  GameRendering.hpp  GameStrings.cpp  GameStrings.hpp  Gfx.cpp  Gfx.hpp  GfxSDLGpu.cpp  GostekGraphics.cpp  GostekGraphics.hpp  GostekGraphics.inc.hpp  Input.cpp  Input.hpp  InterfaceGraphics.cpp  InterfaceGraphics.hpp  MapGraphics.cpp  MapGraphics.hpp  SdlApp.cpp  SdlApp.hpp  Sound.cpp  Sound.hpp  UpdateFrame.cpp  UpdateFrame.hpp  WeatherEffects.cpp  WeatherEffects.hpp  main.cpp
src/client/config/: ConfigModule.tweaks.hpp
src/client/debug/: DebugWindow.cpp  DebugWindow.hpp  ImguiSrc.cpp
src/client/ui/: LoadingScreen.cpp  Nuklear.hpp  NuklearImpl.cpp  nuklear_sdl3_gpu.cpp  nuklear_sdl3_gpu.hpp
src/common/: Anims.cpp  Anims.hpp  CMakeLists.txt  Calc.cpp  Calc.hpp  Console.cpp  Console.hpp  Constants.hpp  DefaultFont.cpp  FileUtility.cpp  FileUtility.hpp  GameStrings.cpp  GameStrings.hpp  LogFile.cpp  LogFile.hpp  Logging.cpp  Logging.hpp  MapFile.cpp  MapFile.hpp  Parts.cpp  Parts.hpp  PhysFSExt.cpp  PhysFSExt.hpp  PolyMap.cpp  PolyMap.hpp  Util.cpp  Util.hpp  Vector.cpp  Vector.hpp  Waypoints.cpp  Waypoints.hpp  WeaponSystem.cpp  WeaponSystem.hpp  Weapons.cpp  Weapons.hpp  gfx.hpp  gfx.sh
src/common/misc/: Config.hpp  GlobalSubsystem.hpp  GlobalSystemsCommon.cpp  GlobalSystemsCommon.hpp  PortUtils.cpp  PortUtils.hpp  PortUtilsSoldat.hpp  RandomGenerator.cpp  RandomGenerator.hpp  SHA1.cpp  SHA1.hpp  SHA1Helper.cpp  SHA1Helper.hpp  SafeType.hpp  Singleton.hpp  SoldatConfig.hpp  TFileStream.cpp  TFileStream.hpp  TIniFile.cpp  TIniFile.hpp  TMemoryStream.cpp  TMemoryStream.hpp  TStream.hpp
src/common/network/: GNSBase.cpp  GNSBase.hpp  Net.cpp  Net.hpp
src/common/port_utils/: NotImplemented.cpp  NotImplemented.hpp  SourceLocation.hpp  Utilities.hpp
src/game/: CMakeLists.txt  main.cpp
src/platform/: CMakeLists.txt
src/platform/include/: Threads.hpp
src/platform/linux64/: Threads.cpp
src/samples/: CMakeLists.txt  PolyMapSample.cpp
src/server/: BanSystem.cpp  BanSystem.hpp  CMakeLists.txt  FileServer.hpp  Rcon.cpp  Rcon.cpp.h  Server.cpp  Server.hpp  ServerCommands.cpp  ServerCommands.hpp  ServerHelper.cpp  ServerHelper.hpp  ServerLoop.cpp  ServerLoop.hpp  main.cpp
src/server/config/: ConfigModule.tweaks.hpp
src/shaders/: generic.frag.hlsl  generic.vert.hlsl  nuklear_ui.frag  nuklear_ui.vert
src/shared/: AI.cpp  AI.hpp  AnimationSystem.cpp  AnimationSystem.hpp  Anims.cpp  Anims.hpp  AutoUpdater.cpp  AutoUpdater.cpp.h  CMakeLists.txt  Calc.cpp  Calc.hpp  Command.cpp  Command.hpp  Console.cpp  Console.hpp  Constants.cpp  Constants.cpp.h  Constants.hpp  Cvar.cpp  Cvar.hpp  Demo.cpp  Demo.hpp  Game.cpp  Game.hpp  LogFile.cpp  LogFile.hpp  Logging.cpp  Logging.hpp  MapFile.cpp  MapFile.hpp  Parts.cpp  Parts.hpp  PhysFSExt.hpp  PolyMap.cpp  PolyMap.hpp  SharedConfig.cpp  SharedConfig.hpp  Util.cpp  Util.hpp  Vector.cpp  (+8 more)
src/shared/libs/KrakenSDK/: FaeBase.cpp  FaeBase.cpp.h
src/shared/mechanics/: BackgroundState.hpp  BulletSystem.cpp  BulletSystem.hpp  Bullets.cpp  Bullets.hpp  Control.cpp  Control.hpp  Sparks.cpp  Sparks.hpp  SpriteSystem.cpp  SpriteSystem.hpp  Sprites.cpp  Sprites.hpp  ThingSystem.cpp  ThingSystem.hpp  Things.cpp  Things.hpp
src/shared/misc/: BitStream.cpp  BitStream.hpp  Config.hpp  FlagSet.hpp  FontAtlas.cpp  FontAtlas.hpp  GlobalSystems.cpp  GlobalSystems.hpp  GlobalVariable.cpp  GlobalVariable.hpp  GlobalVariableStorage.cpp  MemoryUtils.hpp  PortUtils.cpp  PortUtils.hpp  PortUtilsSoldat.hpp  RandomGenerator.cpp  SHA1.hpp  SHA1Helper.hpp  SafeType.hpp  SignalUtils.hpp  SoldatConfig.hpp  TFileStream.cpp  TFileStream.hpp  TIniFile.cpp  TIniFile.hpp  TMemoryStream.hpp
src/shared/network/: Net.cpp  Net.hpp  NetworkClient.cpp  NetworkClient.hpp  NetworkClientBullet.cpp  NetworkClientBullet.hpp  NetworkClientConnection.cpp  NetworkClientConnection.hpp  NetworkClientFae.cpp  NetworkClientFae.cpp.h  NetworkClientFunctions.cpp  NetworkClientFunctions.hpp  NetworkClientGame.cpp  NetworkClientGame.hpp  NetworkClientHeartbeat.cpp  NetworkClientHeartbeat.hpp  NetworkClientMessages.cpp  NetworkClientMessages.hpp  NetworkClientSprite.cpp  NetworkClientSprite.hpp  NetworkClientThing.cpp  NetworkClientThing.hpp  NetworkMessageCreator.hpp  NetworkServer.cpp  NetworkServer.hpp  NetworkServerBullet.cpp  NetworkServerBullet.hpp  NetworkServerConnection.cpp  NetworkServerConnection.hpp  NetworkServerFae.cpp  NetworkServerFae.cpp.h  NetworkServerFunctions.cpp  NetworkServerFunctions.hpp  NetworkServerGame.cpp  NetworkServerGame.hpp  NetworkServerHeartbeat.cpp  NetworkServerHeartbeat.hpp  NetworkServerMessages.cpp  NetworkServerMessages.hpp  NetworkServerSprite.cpp  (+5 more)
tests/: CMakeLists.txt
tests/config/: ConfigModule.tweaks.hpp
tests/integration/: CMakeLists.txt
tests/integration/fs/: TFileStreamTest.cpp
tests/integration/physfs/: PhysFSTest.cpp
tests/integration/physfs/test_archive/: test.ini  test2.ini
tests/integration/sound/: SoundTest.cpp
tests/unit/: BinPackTest.cpp  BitStreamTest.cpp  CVarTests.cpp  CalcTest.cpp  FlagSetTest.cpp  FontAtlasTest.cpp  PolyMapTest.cpp  SafeTypeTest.cpp  SharedConfigTest.cpp  TIniFileTest.cpp  TMemoryStreamTest.cpp  UtilTests.cpp  VectorTest.cpp
tests/unit/common/: WeaponSystemTest.cpp
tests/unit/common/notimplemented/: NotImplemented.tweaks.hpp  NotImplementedTests.cpp
tests/unit/shared/: AnimsTest.cpp  CMakeLists.txt
tests/unit/shared/mechanics/: SpriteSystemTest.cpp  SpriteTest.cpp
tests/unit/shared/misc/: CMakeLists.txt  GlobalVariableStorage.cpp  GlobalVariableTest.cpp
