set(SRC
    Client.cpp
    InterfaceGraphics.cpp
    ClientGame.cpp
    GameRendering.cpp
    Gfx.cpp
    ${GLAD_SRC}
    GameMenus.cpp
    Input.cpp
    GameStrings.cpp
    BinPack.cpp
    Sound.cpp
    MapGraphics.cpp
    UpdateFrame.cpp
    WeatherEffects.cpp
    ClientCommands.cpp
    GostekGraphics.cpp
    ControlGame.cpp
    CVarClient.cpp
)

set(SHARED_SRC
    ../shared/Anims.cpp
    ../shared/Command.cpp
    ../shared/Cvar.cpp
    ../shared/Game.cpp
    ../shared/PolyMap.cpp
    ../shared/Demo.cpp
    ../shared/Game.cpp
    ../shared/Console.cpp
    ../shared/LogFile.cpp
    ../shared/PolyMap.cpp
    ../shared/mechanics/Sprites.cpp
    ../shared/mechanics/Sparks.cpp
    ../shared/mechanics/Bullets.cpp
    ../shared/mechanics/Things.cpp
    ../shared/mechanics/Control.cpp
    ../shared/network/Net.cpp
    ../shared/network/NetworkClient.cpp
    ../shared/network/NetworkClientConnection.cpp
    ../shared/network/NetworkClientSprite.cpp
    ../shared/network/NetworkClientGame.cpp
    ../shared/network/NetworkUtils.cpp
    ../shared/network/NetworkClientFunctions.cpp
    ../shared/network/NetworkClientMessages.cpp
    ../shared/network/NetworkClientBullet.cpp
    ../shared/network/NetworkClientThing.cpp
    ../shared/network/NetworkClientHeartbeat.cpp
    ../shared/misc/FontAtlas.cpp
    ../shared/misc/BitStream.cpp
    ../shared/misc/GlobalVariable.cpp
    ../shared/misc/GlobalVariableStorage.cpp
)

add_library(SoldatClientLib OBJECT ${SRC} ${SHARED_SRC})
target_include_directories(SoldatClientLib PRIVATE
    ./config
    ../
    ${PHYSFS_INC}
    ${GLAD_INC}
    ${STB_INCLUDE_DIR}
    ${FREETYPE_INCLUDE_DIRS}
    ${SOLOUD_INCLUDE_DIR}
    ${TRACY_INCLUDE_DIR}
)
target_link_libraries(SoldatClientLib
    SDL2::SDL2main
    SDL2::SDL2-static
    Freetype::Freetype
    GameNetworkingSockets::GameNetworkingSockets_s
    spdlog::spdlog
)


add_executable(SoldatClient main.cpp)
target_link_libraries(SoldatClient
    CommonLib
    SoldatClientLib
    SDL2::SDL2main
    SDL2::SDL2-static
    Freetype::Freetype
    ${PHYSFS_LIB}
    GameNetworkingSockets::GameNetworkingSockets_s
    spdlog::spdlog
    ${SOLOUD_LIBRARY}
)
target_include_directories(SoldatClient PRIVATE
    ./config
    ../
    ${PHYSFS_INC}
    ${GLAD_INC}
    ${STB_INCLUDE_DIR}
    ${FREETYPE_INCLUDE_DIRS}
    ${SOLOUD_INCLUDE_DIR}
    ${TRACY_INCLUDE_DIR}
)
